@@ -1,5 +1,11 @@
 2008-09-04  Michael Snyder  <msnyder@vmware.com>
 
+	* gdb.twreverse/reverse-return.exp: New file.
+	* gdb.twreverse/reverse-return.c: New file.
+	* gdb.twreverse/Makefile.in: Mention reverse-return for make clean.
+
+2008-09-04  Michael Snyder  <msnyder@vmware.com>
+
 	* gdb.twreverse/Makefile.in: Mention step-reverse for make clean.
 
 2008-09-03  Michael Snyder  <msnyder@vmware.com>
